--- a/agenda-voting-api/src/main/resources/application.properties
+++ b/agenda-voting-api/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # H2
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:/home/wolmir/dbh2teset
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
